--- a/MasterWorkerProcessTest/MainWindow.xaml
+++ b/MasterWorkerProcessTest/MainWindow.xaml
@@ -4,6 +4,7 @@
         Title="MainWindow" Height="350" Width="525">
     <Grid>
         <Button x:Name="readFileButton" Content="ReadFile" HorizontalAlignment="Left" Margin="30,24,0,0" VerticalAlignment="Top" Width="75" Click="readFileButton_Click"/>
+        <Button x:Name="runWorkerProcessButton" Content="RunWorker" HorizontalAlignment="Left" Margin="30,76,0,0" VerticalAlignment="Top" Width="75" Click="runWorkerProcessButton_Click"/>
 
     </Grid>
 </Window>
