--- a/MasterWorkerProcessTest/MainWindow.xaml
+++ b/MasterWorkerProcessTest/MainWindow.xaml
@@ -5,6 +5,7 @@
     <Grid>
         <Button x:Name="readFileButton" Content="ReadFile" HorizontalAlignment="Left" Margin="30,24,0,0" VerticalAlignment="Top" Width="75" Click="readFileButton_Click"/>
         <Button x:Name="runWorkerProcessButton" Content="RunWorker" HorizontalAlignment="Left" Margin="30,76,0,0" VerticalAlignment="Top" Width="75" Click="runWorkerProcessButton_Click"/>
+        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="48,122,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
 
     </Grid>
 </Window>
